--- a/sdk/pyproject.toml
+++ b/sdk/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "basyx-python-framework"
 version = "0.1"
 dependencies = ["aas-core3.0"]
-requires-python = ">=3.8"
+requires-python = ">=3.8, <=3.12"
 authors = [
   {name = "The Eclipse BaSyx Authors"}
 ]
