--- a/sdk/pyproject.toml
+++ b/sdk/pyproject.toml
@@ -3,17 +3,17 @@ requires = ["setuptools >= 61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "basyx-python-framework"
+name = "basyx"
 version = "0.1"
 dependencies = ["aas-core3.0"]
-requires-python = ">=3.8, <=3.12"
+requires-python = ">=3.8, <=3.13"
 authors = [
   {name = "The Eclipse BaSyx Authors"}
 ]
 
 description="The Eclipse BaSyx Python SDK, an implementation of the Asset Administration Shell for Industry 4.0 systems"
 readme = "README.md"
-license = {file = "../LICENSE"}
+license = {file = "./LICENSE"}
 
 
 
