--- a/sdk/pyproject.toml
+++ b/sdk/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools >= 61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "basyx"
+name = "basyx-python-framework-base"
 version = "0.1"
 dependencies = ["aas-core3.0"]
 requires-python = ">=3.8, <=3.13"
@@ -14,7 +14,3 @@ authors = [
 description="The Eclipse BaSyx Python SDK, an implementation of the Asset Administration Shell for Industry 4.0 systems"
 readme = "README.md"
 license = {file = "./LICENSE"}
-
-
-
-
