--- a/sdk/pyproject.toml
+++ b/sdk/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "basyx-python-framework-base"
 version = "0.1"
-dependencies = ["aas-core3.0"]
+dependencies = ["aas-core3.0", "pyecma376-2"]
 requires-python = ">=3.8, <3.13"
 authors = [
   {name = "The Eclipse BaSyx Authors"}
