--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,24 +95,7 @@ jobs:
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
-      # TODO add autodoc test
-
-
-  package:
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python ${{ env.X_PYTHON_VERSION }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ env.X_PYTHON_VERSION }}
-    - name: Install dependencies
+        pip install -r docs/docs-requirements.txt
+    - name: Check documentation for errors
       run: |
-        python -m pip install --upgrade pip
-        pip install -q build
-    - name: Create source and wheel dist
-      run: |
-        ls
-        cd ./sdk
-        python -m build
+        SPHINXOPTS="-a -E -n -W --keep-going" make -C docs html
